# fetch-deepl

./: README.md  package.json  pyproject.toml  pyrightconfig.json
fetch_deepl/: __init__.py  __main__.py-  fetch_deepl.py
tests/: test_fetch_deepl.py
