[tool.poetry]
name = "fetch-deepl"
version = "0.1.2"
description = "Fetch result from a deepl-fastapi API."
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/fetch-deepl"

[tool.poetry.dependencies]
python = "^3.8.3"
logzero = "^1.7.0"
typer = "^0.4.1"
httpx = "^0.23.0"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test or poetry run poe test"
test = "pytest tests"
pyright = "pyright fetch_deepl"
flake8 = "flake8 fetch_deepl --ignore F401,E501,F841"
check = ["pyright", "flake8"]
export = "poetry export --without-hashes -f requirements.txt -o requirements.txt"
build = "poetry build"
publish = "poetry publish"
release = ["test", "build", "publish"]
lint = { cmd = "pylint fetch_deepl" }
isort = "isort tests fetch_deepl"
black = "black tests fetch_deepl"
format = ["isort", "black"]
docstyle = "pydocstyle --convention=google tests fetch_deepl"
prerelease = {cmd = "poetry version prerelease && sync-version"}
tunnel = {cmd = "ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^3.9.2"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.14.2"
pyright = "^1.1.254"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[tool.poetry.scripts]
"fetch-deepl" = "fetch_deepl.__main__:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
log_cli = true
testpaths = [
    "tests",
    # "integration",
]

[tool.black]
skip-string-normalization = 0

[tool.isort]
profile = "black"
multi_line_output = 3
